methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var biscuit:Boolean=false
  avance()
  getCouleurSol()
  if (getCouleurSol==Color.green){
    baisseBrosse()
    leveBrosse()
    if (estFaceMur==true){
      gauche()
    }
    recule()
    avance()
    avance()
    if (estSurBiscuit==true){
      biscuit=true
    }
  }
  getCouleurSol()
  else{
    recule()
    gauche()
    avance()
  }
  
  return biscuit  // Write your code here
}

